# reverse-polish-notation-example

./: README.md
RPN/: CMakeLists.txt  main.cpp  test.cpp
RPN/src/: AbstractOperation.h  BuildReversePolishNotation.cpp  BuildReversePolishNotation.h  Calculator.h  Checker.cpp  Checker.h  CollectionOperations.cpp  CollectionOperations.h  Division.cpp  Division.h  DtoRpn.cpp  DtoRpn.h  Minus.cpp  Minus.h  Multiplication.cpp  Multiplication.h  Plus.cpp  Plus.h
